qt_examples_build_begin(EXTERNAL_BUILD)

add_subdirectory(corelib)
add_subdirectory(embedded)
add_subdirectory(qpa)
if(TARGET Qt::DBus)
    add_subdirectory(dbus)
endif()
if(TARGET Qt::Network)
    add_subdirectory(network)
endif()
if(TARGET Qt::Test)
    add_subdirectory(qtestlib)
endif()
if(TARGET Qt::Concurrent)
    add_subdirectory(qtconcurrent)
endif()
if(TARGET Qt::Sql)
    add_subdirectory(sql)
endif()
if(TARGET Qt::Widgets)
    add_subdirectory(widgets)
endif()
if(TARGET Qt::Xml)
    add_subdirectory(xml)
endif()
if(TARGET Qt::Gui)
    add_subdirectory(gui)
endif()
if(QT_FEATURE_opengl AND TARGET Qt::Gui)
    add_subdirectory(opengl)
endif()
if(QT_FEATURE_vulkan AND TARGET Qt::Gui)
    add_subdirectory(vulkan)
endif()

qt_examples_build_end()
