# Copyright (C) 2022 The Qt Company Ltd.
# SPDX-License-Identifier: BSD-3-Clause

qt_examples_build_begin(EXTERNAL_BUILD)

add_subdirectory(corelib)
add_subdirectory(embedded)
if(TARGET Qt6::DBus)
    add_subdirectory(dbus)
endif()
if(TARGET Qt6::Network)
    add_subdirectory(network)
endif()
if(TARGET Qt6::Test)
    add_subdirectory(qtestlib)
endif()
if(TARGET Qt6::Concurrent)
    add_subdirectory(qtconcurrent)
endif()
if(TARGET Qt6::Sql)
    add_subdirectory(sql)
endif()
if(TARGET Qt6::Widgets)
    add_subdirectory(widgets)
endif()
if(TARGET Qt6::Xml)
    add_subdirectory(xml)
endif()
if(TARGET Qt6::Gui)
    add_subdirectory(gui)
endif()
if(QT_FEATURE_opengl AND TARGET Qt6::Gui)
    add_subdirectory(opengl)
endif()
if(QT_FEATURE_vulkan AND TARGET Qt6::Gui)
    add_subdirectory(vulkan)
endif()

qt_examples_build_end()
